
  * Sbuild.built & Sbuild.piupartsConf: add an additional alias to sid chroots
    This is for compatibility with `dgit sbuild`.
  * Sbuild.piupartsConf: no longer takes an Apt.Url. (API Change)
  * Sbuild.piupartsConf & Sbuild.piupartsConfFor: does nothing if corresponding
    schroot not built.
    Previously, this property built the schroot if it was missing.
  * Further improvements to Sbuild.hs haddock.

 -- Sean Whitton <spwhitton@spwhitton.name>  Mon, 05 Sep 2016 11:14:52 -0700

propellor (3.1.2) unstable; urgency=medium

  [ Joey Hess ]
  * Ssh.knownHost: Bug fix: Only fix up the owner of the known_hosts
    file after it exists.

  [ Sean Whitton ]
  * Sbuild.keypairInsecurelyGenerated: Improved to be more robust.
  * Pass --allow-unrelated-histories to git merge when run with git 2.9 or
    newer. This fixes the /usr/bin/propellor wrapper with this version of git.
  * Sbuild.built & Sbuild.builtFor no longer require Sbuild.keypairGenerated.
    Transition guide: If you are using sbuild 0.70.0 or newer, you should
    `rm -r /var/lib/sbuild/apt-keys`.  Otherwise, you should add either
    Sbuild.keypairGenerated or Sbuild.keypairInsecurelyGenerated to your host.
  * Sbuild haddock improvements:
    - State that we don't support squeeze and Buntish older than trusty.
      This is due to our enhancements, such as eatmydata.
    - State that you need sbuild 0.70.0 or newer to build for stretch.
      This is due to gpg2 hitting Debian stretch.
    - Explain when a keygen is required.
    - Update sample ~/.sbuildrc for sbuild 0.71.0.
    - Add hint for customising chroots with propellor.
    - Update example usage of System type.

 -- Joey Hess <id@joeyh.name>  Sun, 28 Aug 2016 14:39:23 -0400

propellor (3.1.1) unstable; urgency=medium

  * Haddock build fix.
    Thanks, Sean Whitton

 -- Joey Hess <id@joeyh.name>  Thu, 23 Jun 2016 08:12:57 -0400

propellor (3.1.0) unstable; urgency=medium

  * Architecture changed from String to an ADT. (API Change)