@@ -6,6 +6,8 @@ propellor (3.2.0) UNRELEASED; urgency=medium
   * Sbuild.piupartsConf & Sbuild.piupartsConfFor: does nothing if corresponding
     schroot not built.
     Previously, this property built the schroot if it was missing.
+  * Using ccache with Sbuild.built & Sbuild.builtFor is now toggleable: these
+    properties now take a parameter of type Sbuild.UseCcache.  (API Change)
   * Further improvements to Sbuild.hs haddock.
 
  -- Sean Whitton <spwhitton@spwhitton.name>  Mon, 05 Sep 2016 11:14:52 -0700
